# conversational_rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  chat_memory1.db  docker-compose.yml  main.py  pyproject.toml  requirement.txt
.github/workflows/: tests.yml
chroma_db/: chroma.sqlite3
eval/: compare_retrieval_strategies.py  evaluate_answers.py  evaluate_retrieval.py  evaluate_with_judge.py  questions.json  strategy_questions.json
src/: chat_memory1.db  chat_memory2.db  compression.py  config.py  conversationalAI.py  database.py  ingest.py  obsolette_rag.py  rag.py  reranker.py  vectorstore.py
src/helpers/: deduplication.py
src/rag/: __init__.py  cache.py  debug.py  llm.py  pipeline.py  prompts.py  retrievers.py  service.py
src/rag/models/: __init__.py  ranked_document.py  router_result.py
src/rag/retrieval/: base.py  factory.py  obsolette_router.py  router.py
src/rag/retrieval/fusion/: strategy.py
src/rag/retrieval/hybrid/: strategy.py
src/rag/retrieval/parent_child/: ingestion.py  store.py  strategy.py
src/rag/routing/: base.py  factory.py  llm.py  rule_based.py  schemas.py
src/services/: session_service.py  upload_service.py
src/ui/: chat.py  main.py  retrieval_inspector.py  sidebar.py  styles.py  welcome.py
src/utils/: citations.py
tests/rag/: test_service.py
tests/rag/models/: test_router_result.py
tests/rag/retrieval/: test_retrieval_factory.py
tests/rag/routing/: test_llm_router.py  test_router_factory.py  test_rule_based_router.py
tests/rag/utils/: test_service_utils.py
