[project]
name = "conversational-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.2.18",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.4.0",
    "langchain-experimental>=0.4.1",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.11.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.46.0",
]
